# megabasterd

megabasterd-rs/: Cargo.toml  README.md
megabasterd-rs/crates/megabasterd-app/: Cargo.toml  tauri.conf.json
megabasterd-rs/crates/megabasterd-app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
megabasterd-rs/crates/megabasterd-app/frontend/src/: App.svelte  app.css
megabasterd-rs/crates/megabasterd-app/frontend/src/lib/api/: events.ts  tauri.ts
megabasterd-rs/crates/megabasterd-app/frontend/src/lib/components/: DownloadItem.svelte  LinkGrabberDialog.svelte  StatusBar.svelte
megabasterd-rs/crates/megabasterd-app/frontend/src/lib/stores/: downloads.svelte.ts
megabasterd-rs/crates/megabasterd-app/frontend/src/lib/utils/: format.ts
megabasterd-rs/crates/megabasterd-app/icons/: icon.icns
megabasterd-rs/crates/megabasterd-app/src/: main.rs  state.rs
megabasterd-rs/crates/megabasterd-app/src/commands/: account_cmds.rs  download_cmds.rs  link_cmds.rs  mod.rs  settings_cmds.rs
megabasterd-rs/crates/megabasterd-core/: Cargo.toml
megabasterd-rs/crates/megabasterd-core/src/: lib.rs
megabasterd-rs/crates/megabasterd-core/src/clipboard/: mod.rs
megabasterd-rs/crates/megabasterd-core/src/config/: mod.rs
megabasterd-rs/crates/megabasterd-core/src/crypto/: mod.rs
megabasterd-rs/crates/megabasterd-core/src/db/: mod.rs  models.rs
megabasterd-rs/crates/megabasterd-core/src/download/: chunk.rs  chunk_downloader.rs  chunk_writer.rs  mod.rs  progress.rs  speed_meter.rs  throttle.rs
megabasterd-rs/crates/megabasterd-core/src/link_parser/: mod.rs
megabasterd-rs/crates/megabasterd-core/src/mega_api/: errors.rs  mod.rs  types.rs
megabasterd-rs/crates/megabasterd-core/src/megacrypter/: mod.rs
megabasterd-rs/crates/megabasterd-core/src/proxy/: mod.rs
megabasterd-rs/crates/megabasterd-core/src/transfer_manager/: mod.rs
megabasterd-rs/crates/megabasterd-core/src/util/: mod.rs
