[workspace]
members = [
    "crates/megabasterd-core",
    "crates/megabasterd-app",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json", "socks", "stream"] }

# Crypto (RustCrypto)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ecb = "0.1"
ctr = "0.9"
cipher = { version = "0.4", features = ["alloc"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
hmac = "0.12"
sha2 = "0.10"
num-bigint = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Encoding
base64 = "0.22"
hex = "0.4"

# Compression
flate2 = "1"

# Regex
regex = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
byteorder = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
